[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-dev-utils"
version = "0.1.0"
dependencies = []
requires-python = ">=3.10"
authors = [
  {name = "Jack", email = "giacomo.salici@unimore.it"}
]
description = "Colletion of utilities for debugging and developing Pytorch models."
readme = "readme.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["pytorch", "debugging", "utils", "hooks", "logging"]

[project.urls]
Documentation = "https://github.com/jacksalici/PytorchDevUtils"
Repository = "https://github.com/jacksalici/PytorchDevUtils.git"
Issues = "https://github.com/jacksalici/PytorchDevUtils/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"